kubernetes/istio/introspect-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: introspect-istio
  annotations:
    kubernetes.io/ingress.class: "istio"
  labels:
    app: introspect
spec:
  rules:
  - host: introspect.istio.example.com
    http:
      paths:
      - path: /.*
        backend:
          serviceName: introspect
          servicePort: 80
